# blog-builder

./: Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
blog_builder/: cli.py  models.py
blog_builder/libs/: chunk.py  download.py  io.py
docker/: Dockerfile
notebooks/: hugging-face-gpt-j-summarrization.ipynb
resources/posts/: go_emotions.txt  lizzards.txt
