[tool.poetry]
name = "blog_builder"
version = "1.0.0"
description = ""
authors = ["Amaaai <amaaai@gmail.com>"]

[tool.poetry.scripts]
blog_builder = "blog_builder.cli:main"

[tool.poetry.dependencies]
python = "^3.9"
scrapy = "==2.3.0"
pydantic = "==1.5.1"
typer = "==0.3.2"
nltk="==3.6.5"
transformers="==4.12.3"
torchvision="==0.11.1"
torch="==1.10.0"

[tool.poetry.dev-dependencies]
mockito="==1.2.2"
setuptools="==50.3.0"
mypy="==0.812"
pytest="==5.3.2"
isort="==4.3.21"
pylint="==2.9.6"
black="==19.10b0"
pipenv-setup = "==3.1.1"
chardet = ">=1.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 80
profile = "black"

[tool.black]
line-length = 80
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | \.eggs
  | \.git
  | build
  | dist
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | \.egg-info
  | \.idea
  | \.github
)/
'''

[tool.mypy]
no_site_packages = true
ignore_missing_imports = true

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py", "test/*.py"]
markers = [
    "integration: mark a test as integration test, required internet and cloud auth",
]
